avoiding a major re-layout and content jump when an image loads

--- a/kifi-backend/modules/shoebox/angular/src/layout/main/main.styl
+++ b/kifi-backend/modules/shoebox/angular/src/layout/main/main.styl
@@ -274,7 +274,9 @@ input::-ms-clear
     text-align: left
 
     .import-file-others-icon
-      position: relative  // placeholder for now.
+      height: 79px
+      width: 83px
+      border-radius: 9px
 
     .arrow-right-icon
       display: inline-block
